config d463d9ead8a7a07d3e00d25cd67bccef0a8a98a4

--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
 <section id=about>
 我不會寫程式啊
 <p>Find me on
-<a class=icon target=_blank rel=noopener href=test aria-label=facebook>
+<a class=icon target=_blank rel=noopener href=https://www.facebook.com/errorpro05 aria-label=facebook>
 <i class="fab fa-facebook" aria-hidden=true></i>
 </a>
 ,
-<a class=icon target=_blank rel=noopener href=test aria-label=github>
-<i class="fab fa-github" aria-hidden=true></i>
+<a class=icon target=_blank rel=noopener href=https://shorturl.at/mzCNS aria-label=ice-cream>
+<i class="fab fa-ice-cream" aria-hidden=true></i>
 </a>
 and
 <a class=icon target=_blank rel=noopener href=mailto:u810025@gmail.com aria-label=Email>
