--- a/resources/index.html
+++ b/resources/index.html
@@ -8,9 +8,9 @@
 <link rel=stylesheet href=https://latest.cactus.chat/style.css type=text/css>
 <meta charset=utf-8>
 <meta http-equiv=x-ua-compatible content="IE=edge">
-<title> 資源 | ErrorPro(黃乙家)</title>
+<title> 資源 | ErrorPro</title>
 <link rel=canonical href=/resources/>
-<meta name=description content="我不會寫程式啊">
+<meta name=description content="站在雲林打魚打程式的普通高中生">
 <meta name=viewport content="width=device-width,initial-scale=1">
 <meta name=robots content="all,follow">
 <meta name=googlebot content="index,follow,snippet,archive">
@@ -32,7 +32,7 @@
 <a href=/>
 <div id=logo style=background-image:url(/images/logo.png)></div>
 <div id=title>
-<h1>ErrorPro(黃乙家)</h1>
+<h1>ErrorPro</h1>
 </div>
 </a>
 <div id=nav>
@@ -55,7 +55,7 @@
 </article>
 <footer id=footer>
 <div class=footer-left>
-Copyright &copy; 2022 ErrorPro(黃乙家)
+Copyright &copy; 2022 ErrorPro
 </div>
 <div class=footer-right>
 <nav>
