--- a/resources/index.html
+++ b/resources/index.html
@@ -15,12 +15,28 @@
 <meta name=robots content="all,follow">
 <meta name=googlebot content="index,follow,snippet,archive">
 <meta property="og:title" content="資源">
-<meta property="og:description" content="沒有資源">
+<meta property="og:description" content="解題系統：
+  TIOJ
+  CSES
+  ZeroJudge
+  Codeforces
+  Uva
+  洛谷
+  自己亂搞的OJ
+  ">
 <meta property="og:type" content="article">
 <meta property="og:url" content="/resources/"><meta property="article:section" content>
 <meta name=twitter:card content="summary">
 <meta name=twitter:title content="資源">
-<meta name=twitter:description content="沒有資源">
+<meta name=twitter:description content="解題系統：
+  TIOJ
+  CSES
+  ZeroJudge
+  Codeforces
+  Uva
+  洛谷
+  自己亂搞的OJ
+  ">
 <link rel=stylesheet href=/css/styles.c05d68261bf086a9d7713c4f8a6215a3601608e267a816a7ee58f139b3d1aae51222aae2081c8e0c6bd35e1334773b7a16283022f31f92afd93bb37e5e822e66.css integrity="sha512-wF1oJhvwhqnXcTxPimIVo2AWCOJnqBan7ljxObPRquUSIqriCByODGvTXhM0dzt6FigwIvMfkq/ZO7N+XoIuZg==">
 <link rel=stylesheet href=/css/highlight.css> <link rel=stylesheet href=/css/style-dark.css> <link rel=stylesheet href=/css/search.css><!--[if lt IE 9]><script src=https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js></script>
 <script src=https://oss.maxcdn.com/respond/1.4.2/respond.min.js></script><![endif]-->
@@ -50,7 +66,30 @@
 </header>
 <article class=post itemscope itemtype=http://schema.org/BlogPosting>
 <div class=content itemprop=articleBody>
-<p>沒有資源</p>
+<p>解題系統：</p>
+<ul>
+<li>
+<p><a href=https://tioj.ck.tp.edu.tw>TIOJ</a></p>
+</li>
+<li>
+<p><a href=https://cses.fi/problemset/>CSES</a></p>
+</li>
+<li>
+<p><a href=https://zerojudge.tw>ZeroJudge</a></p>
+</li>
+<li>
+<p><a href=https://codeforces.com>Codeforces</a></p>
+</li>
+<li>
+<p><a href=https://onlinejudge.org>Uva</a></p>
+</li>
+<li>
+<p><a href=https://www.luogu.com.cn>洛谷</a></p>
+</li>
+<li>
+<p><a href=http://erpro.serveftp.com:180>自己亂搞的OJ</a></p>
+</li>
+</ul>
 </div>
 </article>
 <footer id=footer>
