--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 <li><a href=/posts>廢文區</a></li>
 <li><a href=/resources>資源</a></li>
 <li><a href=/tags>標籤</a></li>
+<li><a href=/comment>留言區</a></li>
 <li><a href=/about>關於本人</a></li>
 </ul>
 </div>
@@ -70,12 +71,12 @@ and
 <span class=h1><a href=/posts>Writings</a></span>
 <span class=h2>Topics</span>
 <span class="widget tagcloud">
-<a style=font-size:3.3947368421052633rem href=/tags/algorithms/>algorithms</a>
-<a style=font-size:.763157894736842rem href=/tags/bot/>Bot</a>
-<a style=font-size:.763157894736842rem href=/tags/c-cpp/>C-Cpp</a>
-<a style=font-size:1.026315789473684rem href=/tags/idx/>Idx</a>
-<a style=font-size:.763157894736842rem href=/tags/mix/>mix</a>
-<a style=font-size:.763157894736842rem href=/tags/python/>python</a>
+<a style=font-size:3.25rem href=/tags/algorithms/>algorithms</a>
+<a style=font-size:.75rem href=/tags/bot/>Bot</a>
+<a style=font-size:.75rem href=/tags/c-cpp/>C-Cpp</a>
+<a style=font-size:1.25rem href=/tags/idx/>Idx</a>
+<a style=font-size:.75rem href=/tags/mix/>mix</a>
+<a style=font-size:.75rem href=/tags/python/>python</a>
 </span>
 <span class=h2>Most recent</span>
 <ul class=post-list>
@@ -132,6 +133,7 @@ Copyright &copy; 2022 ErrorPro
 <li><a href=/posts>廢文區</a></li>
 <li><a href=/resources>資源</a></li>
 <li><a href=/tags>標籤</a></li>
+<li><a href=/comment>留言區</a></li>
 <li><a href=/about>關於本人</a></li>
 </ul>
 </nav>
