--- a/about/index.html
+++ b/about/index.html
@@ -52,6 +52,7 @@ IG: cannot.load_connection.refused">
 <li><a href=/posts>廢文區</a></li>
 <li><a href=/resources>資源</a></li>
 <li><a href=/tags>標籤</a></li>
+<li><a href=/comment>留言區</a></li>
 <li><a href=/about>關於本人</a></li>
 </ul>
 </div>
@@ -76,6 +77,7 @@ Copyright &copy; 2022 ErrorPro
 <li><a href=/posts>廢文區</a></li>
 <li><a href=/resources>資源</a></li>
 <li><a href=/tags>標籤</a></li>
+<li><a href=/comment>留言區</a></li>
 <li><a href=/about>關於本人</a></li>
 </ul>
 </nav>
