Fix links 6993e31fb2e46263d44523b5c1d9d78509ee1c5a

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <script src=https://oss.maxcdn.com/respond/1.4.2/respond.min.js></script><![endif]--><link rel=icon type=image/png href=/images/favicon.ico></head><body class="max-width mx-auto px3 ltr"><div class="content index py4"><header id=header><a href=/><div id=logo style=background-image:url(/images/logo.png)></div><div id=title><h1>ErrorPro</h1></div></a><div id=nav><ul><li class=icon><a href=# aria-label=Menu><i class="fas fa-bars fa-2x" aria-hidden=true></i></a></li><li><a href=/>主頁</a></li><li><a href=/posts>廢文區</a></li><li><a href=/resources>資源</a></li><li><a href=/tags>標籤</a></li><li><a href=/comment>留言區</a></li><li><a href=/about>關於本人</a></li></ul></div></header><section id=about>我覺得現在在看這句話的人超電<p>Find me on
 <a class=icon target=_blank rel=noopener href=https://www.facebook.com/errorpro05 aria-label=facebook><i class="fab fa-facebook" aria-hidden=true></i></a>
 ,
-<a class=icon target=_blank rel=noopener href=https://shorturl.at/mzCNS aria-label=ice-cream><i class="fab fa-ice-cream" aria-hidden=true></i></a>
+<a class=icon target=_blank rel=noopener href=https://bit.ly/3D66h7j aria-label=ice-cream><i class="fab fa-ice-cream" aria-hidden=true></i></a>
 and
 <a class=icon target=_blank rel=noopener href=mailto:u810025@gmail.com aria-label=Email><i class="fas fa-envelope" aria-hidden=true></i></a>
 .</p></section><section id=writing><span class=h1><a href=/posts>Writings</a></span>
