--- a/about/index.html
+++ b/about/index.html
@@ -1,34 +1,48 @@
 <!doctype html><html lang=en-us><head><link rel=preload href=/lib/font-awesome/webfonts/fa-brands-400.woff2 as=font type=font/woff2 crossorigin=anonymous><link rel=preload href=/lib/font-awesome/webfonts/fa-regular-400.woff2 as=font type=font/woff2 crossorigin=anonymous><link rel=preload href=/lib/font-awesome/webfonts/fa-solid-900.woff2 as=font type=font/woff2 crossorigin=anonymous><link rel=preload href=/lib/JetBrainsMono/web/woff2/JetBrainsMono-Regular.woff2 as=font type=font/woff2 crossorigin=anonymous><script type=text/javascript src=https://latest.cactus.chat/cactus.js></script>
 <link rel=stylesheet href=https://latest.cactus.chat/style.css type=text/css><meta charset=utf-8><meta http-equiv=x-ua-compatible content="IE=edge"><title>About | ErrorPro</title><link rel=canonical href=/about/><meta name=description content="我覺得現在在看這句話的人超電"><meta name=viewport content="width=device-width,initial-scale=1"><meta name=robots content="all,follow"><meta name=googlebot content="index,follow,snippet,archive"><meta property="og:title" content="About"><meta property="og:description" content="我是誰 黃乙家
 A common student studying in Chung Yuan Christian University Department of Information and Computer Engineering
-IG: cannot.load_connection.refused
-I want to learn&mldr; and more&mldr;
+Find me on , , , , , , and . I want to learn&mldr; and more&mldr;
 I use these OS 神秘的終端
 你可以試試輸入 YI_JIA{this_is_so_cool}
 沒用嗎？要不要換個瀏覽器試試看？"><meta property="og:type" content="article"><meta property="og:url" content="/about/"><meta property="article:section" content><meta name=twitter:card content="summary"><meta name=twitter:title content="About"><meta name=twitter:description content="我是誰 黃乙家
 A common student studying in Chung Yuan Christian University Department of Information and Computer Engineering
-IG: cannot.load_connection.refused
-I want to learn&mldr; and more&mldr;
+Find me on , , , , , , and . I want to learn&mldr; and more&mldr;
 I use these OS 神秘的終端
 你可以試試輸入 YI_JIA{this_is_so_cool}
 沒用嗎？要不要換個瀏覽器試試看？"><link rel=stylesheet href=/css/styles.c05d68261bf086a9d7713c4f8a6215a3601608e267a816a7ee58f139b3d1aae51222aae2081c8e0c6bd35e1334773b7a16283022f31f92afd93bb37e5e822e66.css integrity="sha512-wF1oJhvwhqnXcTxPimIVo2AWCOJnqBan7ljxObPRquUSIqriCByODGvTXhM0dzt6FigwIvMfkq/ZO7N+XoIuZg=="><link rel=stylesheet href=/css/highlight.css><link rel=stylesheet href=/css/style-dark.css><link rel=stylesheet href=/css/search.css><!--[if lt IE 9]><script src=https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js></script>
-<script src=https://oss.maxcdn.com/respond/1.4.2/respond.min.js></script><![endif]--><link rel=icon type=image/png href=/images/favicon.ico></head><body class="max-width mx-auto px3 ltr"><div class="content index py4"><header id=header><a href=/><div id=logo style=background-image:url(/images/logo.png)></div><div id=title><h1>ErrorPro</h1></div></a><div id=nav><ul><li class=icon><a href=# aria-label=Menu><i class="fas fa-bars fa-2x" aria-hidden=true></i></a></li><li><a href=/>主頁</a></li><li><a href=/posts>廢文區</a></li><li><a href=/resources>資源</a></li><li><a href=/tags>標籤</a></li><li><a href=/comment>留言區</a></li><li><a href=/about>關於本人</a></li></ul></div></header><article class=post itemscope itemtype=http://schema.org/BlogPosting><div class=content itemprop=articleBody><h1 id=我是誰>我是誰</h1><p><img src=/images/about/head.gif alt></p><p>黃乙家</p><p>A common student studying in <a href=https://www1.cycu.edu.tw/>Chung Yuan Christian University</a> Department of Information and Computer Engineering</p><p>IG: cannot.load_connection.refused</p><hr><h3 id=i-want-to-learn>I want to learn&mldr;</h3><p><img src="https://img.shields.io/badge/-C-00599c?style=flat&logo=C" alt=C>
-<img src="https://img.shields.io/badge/C%2B%2B-00599c?logo=c%2B%2B&style=flat" alt=C++>
-<img src="https://img.shields.io/badge/-Python-yellow?logo=Python&style=flat" alt=Python>
-<img src="https://img.shields.io/badge/Java-ed8b00?logo=java&style=flat&logoColor=white" alt=Java>
-<img src="https://img.shields.io/badge/C%23-239120?logo=c-sharp&style=flat" alt=C#>
-<img src="https://img.shields.io/badge/GoLang-00add8?logo=Go&style=flat&logoColor=white" alt=Go>
-<img src="https://img.shields.io/badge/R-2e6dc3?logo=R&style=flat" alt=R>
-<img src="https://img.shields.io/badge/Javascript-ffb13b?logo=javascript&style=flat&logoColor=white" alt=Javascript>
-<img src="https://img.shields.io/badge/Kotlin-0095d5?logo=Kotlin&style=flat" alt=Kotlin>
-<img src="https://img.shields.io/badge/SQLite-07405E?logo=SQLite&style=flat" alt=SQLite>
-<img src="https://img.shields.io/badge/Docker-2496ED?style=flat-square&logo=Docker&logoColor=white" alt=Docker>
-<img src="https://img.shields.io/badge/Algorithms-2e6dc3?logo=TheAlgorithms&style=flat&logoColor=white" alt=Algorithms>
-<img src="https://img.shields.io/badge/Data%20Structure-red?logo=Task&style=flat&logoColor=white" alt=DataStructure>
-<img src="https://img.shields.io/badge/IT%20Security-154700?logo=HackClub&style=flat&logoColor=white" alt="IT Security"></p><p>and more&mldr;</p><hr><h3 id=i-use-these-os>I use these OS</h3><p><img src="https://img.shields.io/badge/Windows_11-0078D6?style=flat-square&logo=Windows11&logoColor=white" alt=Windows>
-<img src="https://img.shields.io/badge/Android-3DDC84?style=flat-square&logo=Android&logoColor=white" alt=Android>
-<img src="https://img.shields.io/badge/Kali%20Linux-557C94?style=flat-square&logo=Kali-Linux&logoColor=white" alt="Kali Linux">
-<img src="https://img.shields.io/badge/Ubuntu-E95420?style=flat-square&logo=Ubuntu&logoColor=white" alt=Ubuntu></p><hr><p>神秘的終端</p><p>你可以試試輸入
+<script src=https://oss.maxcdn.com/respond/1.4.2/respond.min.js></script><![endif]--><link rel=icon type=image/png href=/images/favicon.ico></head><body class="max-width mx-auto px3 ltr"><div class="content index py4"><header id=header><a href=/><div id=logo style=background-image:url(/images/logo.png)></div><div id=title><h1>ErrorPro</h1></div></a><div id=nav><ul><li class=icon><a href=# aria-label=Menu><i class="fas fa-bars fa-2x" aria-hidden=true></i></a></li><li><a href=/>主頁</a></li><li><a href=/posts>廢文區</a></li><li><a href=/resources>資源</a></li><li><a href=/tags>標籤</a></li><li><a href=/comment>留言區</a></li><li><a href=/about>關於本人</a></li></ul></div></header><article class=post itemscope itemtype=http://schema.org/BlogPosting><div class=content itemprop=articleBody><h1 id=我是誰>我是誰</h1><p><img src=/images/about/head.gif alt></p><p>黃乙家</p><p>A common student studying in <a href=https://www1.cycu.edu.tw/>Chung Yuan Christian University</a> Department of Information and Computer Engineering</p><p>Find me on
+<a class=icon target=_blank rel=noopener href=https://www.facebook.com/errorpro05 aria-label=facebook><i class="fab fa-facebook" aria-hidden=true></i></a>
+,
+<a class=icon target=_blank rel=noopener href=https://www.instagram.com/cannot.load_connection.refused/ aria-label=instagram><i class="fab fa-instagram" aria-hidden=true></i></a>
+,
+<a class=icon target=_blank rel=noopener href=https://github.com/ja-errorpro aria-label=github><i class="fab fa-github" aria-hidden=true></i></a>
+,
+<a class=icon target=_blank rel=noopener href=https://discordapp.com/users/430940209975132160 aria-label=discord><i class="fab fa-discord" aria-hidden=true></i></a>
+,
+<a class=icon target=_blank rel=noopener href=https://bit.ly/3D66h7j aria-label=youtube><i class="fab fa-youtube" aria-hidden=true></i></a>
+,
+<a class=icon target=_blank rel=noopener href=https://g.dev/CompileErr0r aria-label=google><i class="fab fa-google" aria-hidden=true></i></a>
+,
+<a class=icon target=_blank rel=noopener href=https://twitter.com/CompileErr0r aria-label=twitter><i class="fab fa-twitter" aria-hidden=true></i></a>
+and
+<a class=icon target=_blank rel=noopener href=mailto:yijiahuang@ja-errorpro.cf aria-label=Email><i class="fas fa-envelope" aria-hidden=true></i></a>
+.</p><hr><h3 id=i-want-to-learn>I want to learn&mldr;</h3><p><img src="https://img.shields.io/badge/-C-00599c?style=flat&amp;logo=C" alt=C>
+<img src="https://img.shields.io/badge/C%2B%2B-00599c?logo=c%2B%2B&amp;style=flat" alt=C++>
+<img src="https://img.shields.io/badge/-Python-yellow?logo=Python&amp;style=flat" alt=Python>
+<img src="https://img.shields.io/badge/Java-ed8b00?logo=java&amp;style=flat&amp;logoColor=white" alt=Java>
+<img src="https://img.shields.io/badge/C%23-239120?logo=c-sharp&amp;style=flat" alt=C#>
+<img src="https://img.shields.io/badge/GoLang-00add8?logo=Go&amp;style=flat&amp;logoColor=white" alt=Go>
+<img src="https://img.shields.io/badge/R-2e6dc3?logo=R&amp;style=flat" alt=R>
+<img src="https://img.shields.io/badge/Javascript-ffb13b?logo=javascript&amp;style=flat&amp;logoColor=white" alt=Javascript>
+<img src="https://img.shields.io/badge/Kotlin-0095d5?logo=Kotlin&amp;style=flat" alt=Kotlin>
+<img src="https://img.shields.io/badge/SQLite-07405E?logo=SQLite&amp;style=flat" alt=SQLite>
+<img src="https://img.shields.io/badge/Docker-2496ED?style=flat-square&amp;logo=Docker&amp;logoColor=white" alt=Docker>
+<img src="https://img.shields.io/badge/Algorithms-2e6dc3?logo=TheAlgorithms&amp;style=flat&amp;logoColor=white" alt=Algorithms>
+<img src="https://img.shields.io/badge/Data%20Structure-red?logo=Task&amp;style=flat&amp;logoColor=white" alt=DataStructure>
+<img src="https://img.shields.io/badge/IT%20Security-154700?logo=HackClub&amp;style=flat&amp;logoColor=white" alt="IT Security"></p><p>and more&mldr;</p><hr><h3 id=i-use-these-os>I use these OS</h3><p><img src="https://img.shields.io/badge/Windows_11-0078D6?style=flat-square&amp;logo=Windows11&amp;logoColor=white" alt=Windows>
+<img src="https://img.shields.io/badge/Android-3DDC84?style=flat-square&amp;logo=Android&amp;logoColor=white" alt=Android>
+<img src="https://img.shields.io/badge/Kali%20Linux-557C94?style=flat-square&amp;logo=Kali-Linux&amp;logoColor=white" alt="Kali Linux">
+<img src="https://img.shields.io/badge/Ubuntu-E95420?style=flat-square&amp;logo=Ubuntu&amp;logoColor=white" alt=Ubuntu></p><hr><p>神秘的終端</p><p>你可以試試輸入
 YI_JIA{this_is_so_cool}</p><p>沒用嗎？要不要換個瀏覽器試試看？</p><div><script src=/js/base64.js></script>
 <script src=/js/md5.js></script>
 <script src=/js/a_secret_script.js></script>
