fix command error

--- a/public/resources/index.html
+++ b/public/resources/index.html
@@ -18,13 +18,13 @@
   <meta property="og:url" content="http://localhost:1313/resources/">
   <meta property="og:site_name" content="ErrorPro">
   <meta property="og:title" content="資源">
-  <meta property="og:description" content="本站資源 C&#43;&#43;語法筆記 算法筆記 線性代數筆記 線上解題網站 TIOJ 建國中學程式解題系統 CSES ZeroJudge 高中生程式解題系統 Codeforces Uva 洛谷 LeetCode 高中資訊相關考試、競賽 全國資訊學科能力競賽 模擬賽 APCS 大學先修程式設計能力檢定 各校資訊學科能力競賽校隊選拔 各縣市資訊學科能力競賽 國際資訊奧林匹克競賽 資訊之芽 NHDK 四校聯合初學者程式設計競賽 NPSC 網際網路程式設計全國大賽 YTP 少年圖靈計畫 大學資訊相關考試、競賽 ACM/ICPC 國際大學生程式設計競賽 NCPC 全國大專電腦軟體設計競賽 CPE 大學程式能力檢定 Codeforces Round Google Kick Start Facebook Hacker Cup Codewars 還有很多有空再補">
+  <meta property="og:description" content="本站資源 C&#43;&#43;語法筆記 算法筆記 線性代數筆記 OSCP 筆記 線上解題網站 TIOJ 建國中學程式解題系統 CSES ZeroJudge 高中生程式解題系統 Codeforces Uva 洛谷 LeetCode 高中資訊相關考試、競賽 全國資訊學科能力競賽 模擬賽 APCS 大學先修程式設計能力檢定 各校資訊學科能力競賽校隊選拔 各縣市資訊學科能力競賽 國際資訊奧林匹克競賽 資訊之芽 NHDK 四校聯合初學者程式設計競賽 NPSC 網際網路程式設計全國大賽 YTP 少年圖靈計畫 大學資訊相關考試、競賽 ACM/ICPC 國際大學生程式設計競賽 NCPC 全國大專電腦軟體設計競賽 CPE 大學程式能力檢定 Codeforces Round Google Kick Start Facebook Hacker Cup Codewars 還有很多有空再補">
   <meta property="og:locale" content="zh_TW">
   <meta property="og:type" content="article">
  
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="資源">
-  <meta name="twitter:description" content="本站資源 C&#43;&#43;語法筆記 算法筆記 線性代數筆記 線上解題網站 TIOJ 建國中學程式解題系統 CSES ZeroJudge 高中生程式解題系統 Codeforces Uva 洛谷 LeetCode 高中資訊相關考試、競賽 全國資訊學科能力競賽 模擬賽 APCS 大學先修程式設計能力檢定 各校資訊學科能力競賽校隊選拔 各縣市資訊學科能力競賽 國際資訊奧林匹克競賽 資訊之芽 NHDK 四校聯合初學者程式設計競賽 NPSC 網際網路程式設計全國大賽 YTP 少年圖靈計畫 大學資訊相關考試、競賽 ACM/ICPC 國際大學生程式設計競賽 NCPC 全國大專電腦軟體設計競賽 CPE 大學程式能力檢定 Codeforces Round Google Kick Start Facebook Hacker Cup Codewars 還有很多有空再補">
+  <meta name="twitter:description" content="本站資源 C&#43;&#43;語法筆記 算法筆記 線性代數筆記 OSCP 筆記 線上解題網站 TIOJ 建國中學程式解題系統 CSES ZeroJudge 高中生程式解題系統 Codeforces Uva 洛谷 LeetCode 高中資訊相關考試、競賽 全國資訊學科能力競賽 模擬賽 APCS 大學先修程式設計能力檢定 各校資訊學科能力競賽校隊選拔 各縣市資訊學科能力競賽 國際資訊奧林匹克競賽 資訊之芽 NHDK 四校聯合初學者程式設計競賽 NPSC 網際網路程式設計全國大賽 YTP 少年圖靈計畫 大學資訊相關考試、競賽 ACM/ICPC 國際大學生程式設計競賽 NCPC 全國大專電腦軟體設計競賽 CPE 大學程式能力檢定 Codeforces Round Google Kick Start Facebook Hacker Cup Codewars 還有很多有空再補">
      
   <link
     rel="stylesheet"
@@ -103,6 +103,7 @@
 <li><a href="/posts/cpp-index/">C++語法筆記</a></li>
 <li><a href="/posts/algo-index/">算法筆記</a></li>
 <li><a href="/posts/LinearAlgebra/linear-index/">線性代數筆記</a></li>
+<li><a href="/posts/OSCP/oscp-index/">OSCP 筆記</a></li>
 </ul>
 <h1 id="線上解題網站">線上解題網站</h1>
 <ul>
