Add gridview for resource links, add friend links

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -270,7 +270,14 @@ Find me on, , , , , , and .">
 <li>Google DevFest Taoyuan 2024 Attendee</li>
 <li>SITCON 2024 Volunteer</li>
 <li>Google Developer Groups on Campus CYCU 2024 Organizer &amp; Speaker</li>
-<li>Devcore Conference 2025 Attendee</li>
+<li>DEVCORE Conference 2025 Attendee</li>
+<li>SITCON 2025 Attendee</li>
+<li>COSCUP 2025 Attendee</li>
+<li>HITCON 2025 Attendee</li>
+<li>CYCU IT Department Part-time Assistant</li>
+<li>Google Developer Groups On Campus CYCU 2025 Core Team</li>
+<li>TeamT5 Camp 2026</li>
+<li>Taiwan Security Club 2026 Staff</li>
 </ul>
 <hr>
 <h3 id="i-want-to-learn">I want to learn&hellip;</h3>
